--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -16,6 +16,11 @@ publisher:
   url: https://www.charite.de/
 
 dependencies:
+  # Explicit dependency on hl7.terminology not required (and probably wrong version), but if this is not specified here
+  # then the IG publisher will insert "hl7.terminology.r5#3.0.0" into the package, which uses version string "4.6.0" which
+  # is otherwise not known by the IG publisher and will yield errors
+  hl7.terminology:
+    version: 3.1.0
   hl7.fhir.uv.cpg:
     version: 1.0.0
 
