--- a/input/data/ig.yml
+++ b/input/data/ig.yml
@@ -804,4 +804,4 @@ resourceType: ImplementationGuide
 status: draft
 title: Clinical Practice Guidelines (CPG) on EBMonFHIR
 url: https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir/ImplementationGuide/cpg.ceosys.de
-version: 0.3.2-snapshot
+version: 0.3.3
