--- a/input/data/ig.yml
+++ b/input/data/ig.yml
@@ -823,4 +823,4 @@ resourceType: ImplementationGuide
 status: draft
 title: Clinical Practice Guidelines (CPG) on EBMonFHIR
 url: https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir/ImplementationGuide/cpg.ceosys.de
-version: 0.3.4
+version: 0.3.5-snapshot
