--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.3.4
+current_version = 0.3.5-snapshot
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>\S+))?
 serialize =
 	{major}.{minor}.{patch}-{release}
@@ -10,8 +10,8 @@ tag = False
 [bumpversion:part:release]
 optional_value = release
 values =
-	release
 	snapshot
+	release
 
 [bumpversion:file:sushi-config.yaml]
 search = version: {current_version}
