--- a/.github/workflows/fhir-validate.yml
+++ b/.github/workflows/fhir-validate.yml
@@ -56,7 +56,8 @@ jobs:
         run: npm install -g fsh-sushi
 
       - name: Load validator
-        run: curl -L https://github.com/hapifhir/org.hl7.fhir.core/releases/latest/download/validator_cli.jar -o ./validator_cli.jar
+        # fixed version because 5.6.76 fails
+        run: curl -L https://github.com/hapifhir/org.hl7.fhir.core/releases/download/5.6.75/validator_cli.jar -o ./validator_cli.jar
 
       - name: Install FHIR R5 CI
         run: ./download-fhir-r5-ci.sh
