--- a/input/data/ig.yml
+++ b/input/data/ig.yml
@@ -841,4 +841,4 @@ resourceType: ImplementationGuide
 status: draft
 title: Clinical Practice Guidelines (CPG) on EBMonFHIR
 url: https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir/ImplementationGuide/cpg.ceosys.de
-version: 0.3.6
+version: 0.4.0-snapshot
