--- a/input/data/ig.yml
+++ b/input/data/ig.yml
@@ -823,16 +823,12 @@ definition:
     reference:
       reference: Citation/SystemicCorticosteroidsForTheTreatmentOfCOVID19
 dependsOn:
-- id: hl7_terminology
-  packageId: hl7.terminology
-  uri: http://terminology.hl7.org/ImplementationGuide/hl7.terminology
-  version: 3.1.0
 - id: hl7_fhir_uv_cpg
   packageId: hl7.fhir.uv.cpg
   uri: http://hl7.org/fhir/uv/cpg/ImplementationGuide/hl7.fhir.uv.cpg
   version: 1.0.0
 fhirVersion:
-- 5.0.0-ballot
+- 5.0.0-snapshot3
 id: cpg.ceosys.de
 name: CPGonEBMonFHIR
 packageId: cpg.ceosys.de
