- Update to FHIR 5.0.0-snapshot3 - Updated IG fhir.base.template version to 0.4.0 - Changed IG id to ebm-cpg.netzwerk-universitaetsmedizin.de

--- a/ceosys-template/package/package.json
+++ b/ceosys-template/package/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ceosys.de.template",
+  "id": "ceosys.de.template",
   "version": "0.1.0",
   "type": "fhir.template",
   "license": "CC0-1.0",
