--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -1,8 +1,4 @@
-# ╭──────────────────────────────────────ImplementationGuide───────────────────────────────────────╮
-# │  The properties below are used to create the ImplementationGuide resource. For a list of       │
-# │  supported properties, see: https://fshschool.org/docs/sushi/configuration/                    │
-# ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-id: cpg.ceosys.de
+id: ebm-cpg.netzwerk-universitaetsmedizin.de
 canonical: https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir
 name: CPG-on-EBMonFHIR
 title: Clinical Practice Guidelines (CPG) on EBMonFHIR
@@ -16,11 +12,6 @@ publisher:
   url: https://www.med.uni-greifswald.de/
 
 dependencies:
-  # Explicit dependency on hl7.terminology not required (and probably wrong version), but if this is not specified here
-  # then the IG publisher will insert "hl7.terminology.r5#3.0.0" into the package, which uses version string "4.6.0" which
-  # is otherwise not known by the IG publisher and will yield errors
-  #hl7.terminology:
-  #  version: 3.1.0
   hl7.fhir.uv.cpg:
     version: 1.0.0
 
@@ -35,8 +26,8 @@ pages:
   extensions.md:
   examples.md:
   downloads.xml:
-  changelog.md:
-    title: Change Log
+  history.md:
+
 
 menu:
   Home: index.html
@@ -46,7 +37,7 @@ menu:
   Extensions: extensions.html
   Examples: examples.html
   Downloads: downloads.html
-  Change Log: changelog.html
+  History: history.html
 
 parameters:  # see https://confluence.hl7.org/display/FHIR/Implementation+Guide+Parameters
   active-tables: 'true' # Whether to generate active tables in the generated fragments (tables that will expand and contract).
