--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,4 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-cpg.ceosys.de.json
+ig = fsh-generated/resources/ImplementationGuide-ebm-cpg.netzwerk-universitaetsmedizin.de.json
 template = #ceosys-template
+#template = fhir.base.template#0.4.0
