--- a/input/data/ig.yml
+++ b/input/data/ig.yml
@@ -37,9 +37,9 @@ definition:
       sourceUrl: downloads.html
       title: Downloads
     - generation: markdown
-      name: changelog.html
-      sourceUrl: changelog.html
-      title: Change Log
+      name: history.html
+      sourceUrl: history.html
+      title: History
     sourceUrl: toc.html
     title: Table of Contents
   parameter:
@@ -823,22 +823,18 @@ definition:
     reference:
       reference: Citation/SystemicCorticosteroidsForTheTreatmentOfCOVID19
 dependsOn:
-- id: hl7_terminology
-  packageId: hl7.terminology
-  uri: http://terminology.hl7.org/ImplementationGuide/hl7.terminology
-  version: 3.1.0
 - id: hl7_fhir_uv_cpg
   packageId: hl7.fhir.uv.cpg
   uri: http://hl7.org/fhir/uv/cpg/ImplementationGuide/hl7.fhir.uv.cpg
   version: 1.0.0
 fhirVersion:
-- 5.0.0-ballot
-id: cpg.ceosys.de
+- 5.0.0-snapshot3
+id: ebm-cpg.netzwerk-universitaetsmedizin.de
 name: CPGonEBMonFHIR
-packageId: cpg.ceosys.de
+packageId: ebm-cpg.netzwerk-universitaetsmedizin.de
 publisher: "Universit\xE4tsmedizin Greifswald"
 resourceType: ImplementationGuide
 status: draft
 title: Clinical Practice Guidelines (CPG) on EBMonFHIR
-url: https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir/ImplementationGuide/cpg.ceosys.de
+url: https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir/ImplementationGuide/ebm-cpg.netzwerk-universitaetsmedizin.de
 version: 0.4.1-snapshot
