--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,7 +3,7 @@ canonical: https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir
 name: CPG-on-EBMonFHIR
 title: Clinical Practice Guidelines (CPG) on EBMonFHIR
 status: draft
-version: 0.5.0
+version: 0.5.1-snapshot
 fhirVersion: 5.0.0-snapshot3
 copyrightYear: 2021+
 releaseLabel: ci-build
