--- a/input/data/ig.yml
+++ b/input/data/ig.yml
@@ -50,7 +50,7 @@ definition:
   - code:
       code: releaselabel
       system: http://hl7.org/fhir/tools/CodeSystem/ig-parameters
-    value: ci-build
+    value: qa-preview
   - code:
       code: active-tables
       system: http://hl7.org/fhir/tools/CodeSystem/ig-parameters
@@ -229,7 +229,8 @@ definition:
     name: PICO Evidence Variable
     reference:
       reference: StructureDefinition/pico-evidence-variable
-  - isExample: false
+  - description: A recommendation as part of a clinical practice guideline.
+    isExample: false
     name: Recommendation
     reference:
       reference: StructureDefinition/recommendation
