--- a/input/data/ig.yml
+++ b/input/data/ig.yml
@@ -877,4 +877,4 @@ resourceType: ImplementationGuide
 status: draft
 title: Clinical Practice Guidelines (CPG) on EBMonFHIR
 url: https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir/ImplementationGuide/ebm-cpg.netzwerk-universitaetsmedizin.de
-version: 0.6.0
+version: 0.6.1-snapshot
