update docs, ig name

--- a/ig.ini
+++ b/ig.ini
@@ -1,4 +1,4 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-ebm-cpg.netzwerk-universitaetsmedizin.de.json
+ig = fsh-generated/resources/ImplementationGuide-de.netzwerk-universitaetsmedizin.ebm-cpg.json
 template = #ceosys-template
 #template = fhir.base.template#0.4.0
