--- a/input/data/ig.yml
+++ b/input/data/ig.yml
@@ -899,4 +899,4 @@ resourceType: ImplementationGuide
 status: draft
 title: Clinical Practice Guidelines (CPG) on EBMonFHIR
 url: https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir/ImplementationGuide/de.netzwerk-universitaetsmedizin.ebm-cpg
-version: 0.7.1-snapshot
+version: 0.7.1
